--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,6 @@ main{
     animation-name: animated_music;
     color:white;
     font-size:30px;
-    margin-left:150px;
     animation:reverse;
     position:relative;
     -webkit-animation-name: example1; /* Safari 4.0 - 8.0 */
@@ -155,8 +154,8 @@ main{
 .food{
     position:relative;
     width: 100px; height: 100px;
-    left:500px;
-    top:-100px;
+    left:70%;
+    top:-50px;
 	border-radius: 50%;
 	background: darkorange;
 	transform-origin:250% center; 
@@ -164,7 +163,7 @@ main{
     animation: animated_food 15s infinite; 
     color:white;
     font-size:30px;
-    margin-left:150px;
+
     animation:reverse;
     -webkit-animation-name: example2; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 10s; /* Safari 4.0 - 8.0 */
@@ -190,7 +189,7 @@ main{
 .sport{
     position:relative;
     width: 100px; height: 100px;
-    left:100px;
+    left:30%;
     top:50px;
 	border-radius: 50%;
 	background: #0099cc;
@@ -199,7 +198,7 @@ main{
     animation: animated_sport 15s; 
     color:white;
     font-size:30px;
-    margin-left:150px;
+
     animation-direction: reverse; 
     -webkit-animation-name: example3; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 10s; /* Safari 4.0 - 8.0 */
@@ -224,8 +223,8 @@ main{
 .game{
     width: 100px; height: 100px;
     position:relative;
-    left:500px;
-    top:-50px;
+    left:70%;
+    top:90%;
 	border-radius: 50%;
 	background: #00cc99;
 	transform-origin:100% center; 
@@ -233,14 +232,13 @@ main{
     animation: animated_food 15s; 
     color:white;
     font-size:30px;
-    margin-left:150px;
     animation:reverse;
 }
 
 .movie{
     width: 100px; height: 100px;
     position:relative;
-    left:300px;
+    left:50%;
     top:-50px;
 	border-radius: 50%;
 	background: lightpink;
@@ -249,6 +247,6 @@ main{
     animation: animated_food 15s; 
     color:white;
     font-size:30px;
-    margin-left:150px;
+
     animation:reverse;
 }
