--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ h1 {
   top: -100px;
   right: 100px;
 }
+#resources {
+  text-align: left;
+}
+#resources li {
+  display: block;
+}
 
 /*#did-u-kno .content {
   background-image: url("../img/girl.png");
