--- a/css/main.css
+++ b/css/main.css
@@ -54,13 +54,13 @@ body{
 }
 main{
     height: 700px; 
-
+    text-align: center
     vertical-align: middle;
     width:100%;
 }
 .Animation{
     display:block;
-    width:100%;
+    width:60%;
 }
 
 .art{
@@ -94,11 +94,11 @@ main{
 
 /* Standard syntax */
 @keyframes example{
-    0%   {background-color:#00ffff;}
-    25%  {background-color:#0099cc;}
-    50%  {background-color:#00cc99;}
-    75%  {background-color:#ffff33;}
-    100% {background-color:#ff0066;}
+    0%   {background-color:#00ffff; left:300px; top:0px;}
+    25%  {background-color:#0099cc; left:50px; top:30px;}
+    50%  {background-color:#00cc99; left:300px; top:100px;}
+    75%  {background-color:#ffff33; left:400px; top: 50px;}
+    100% {background-color:#ff0066; left:0px; top:10px;}
 }
 
 .music{
