--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,11 @@ h1 {
   background-repeat: no-repeat;
   background-position: right;
 }*/
+
+footer .links{
+  text-align: right;
+}
+
+footer a {
+  color: #777;
+}
