--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   /*background-color: #0099cc;*/
 }
 
-header, #circle-nav, #did-u-kno, #resources {
+header, #circle-nav, main, #did-u-kno, #resources {
   height: 100vh;
   padding:1% 20%;
 }
@@ -29,6 +29,24 @@ h1 {
 
 .img-circle {
   border: 7px solid #00cc99;
+}
+
+table {
+  margin: 0 auto;
+  text-align: center;
+}
+
+table p {
+  font-family: "Arial", sans-serif;
+}
+
+td {
+  padding: 15px;
+  background-color: antiquewhite;
+  border-radius: 50%;
+  border:0 transparent solid;
+  border-width: 5px;
+  background-clip:padding-box;
 }
 
 #did-u-kno iframe {
